results/SVCOMP/conversational/log-arraylength1-2024_03_08_05_52_44.txt
class arraylength1 {
  //@ requires size >= 0;
  //@ ensures \result == -1 ==> size < 0;
  //@ ensures \result == 0 ==> size >= 0 && (\exists int[] int_array; int_array.length != size);
  //@ ensures \result == 1 ==> size >= 0 && (\forall int[] int_array; int_array.length == size);
  public static int func(int size) {
    if (size < 0) return -1;
    int int_array[] = new int[size];

    if(int_array.length != size)
      return 0;
    return 1;
  }
}
/home/max/Documents/JMLGPT/tmp/arraylength1.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/arraylength1.java:5:) in method func
    return 1;
    ^
/home/max/Documents/JMLGPT/tmp/arraylength1.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/arraylength1.java:12:
  //@ ensures \result == 1 ==> size >= 0 && (\forall int[] int_array; int_array.length == size);
      ^
2 verification failures

class arraylength1 {
  //@ requires size >= 0;
  //@ ensures \result == -1 ==> size < 0;
  //@ ensures \result == 0 ==> size >= 0 && (\exists int[] int_array; int_array.length != size);
  //@ ensures \result == 1 ==> size >= 0 && (\forall int i; 0 <= i && i < size; int_array[i] == 0);
  public static int func(int size) {
    if (size < 0) return -1;
    int int_array[] = new int[size];

    if(int_array.length != size)
      return 0;
    return 1;
  }
}
/home/max/Documents/JMLGPT/tmp/arraylength1.java:5: error: cannot find symbol
  //@ ensures \result == 1 ==> size >= 0 && (\forall int i; 0 <= i && i < size; int_array[i] == 0);
                                                                                ^
  symbol:   variable int_array
  location: class arraylength1
1 error

class arraylength1 {
  //@ requires size >= 0;
  //@ ensures \result == -1 ==> size < 0;
  //@ ensures \result == 0 ==> size >= 0 && (\exists int[] int_array; int_array.length != size);
  //@ ensures \result == 1 ==> size >= 0 && (\forall int i; 0 <= i && i < size; int_array[i] == 0);
  public static int func(int size) {
    if (size < 0) return -1;
    int int_array[] = new int[size];

    if(int_array.length != size)
      return 0;
    for (int i = 0; i < size; i++) {
        if (int_array[i] != 0) {
            return 0;
        }
    }
    return 1;
  }
}
/home/max/Documents/JMLGPT/tmp/arraylength1.java:5: error: cannot find symbol
  //@ ensures \result == 1 ==> size >= 0 && (\forall int i; 0 <= i && i < size; int_array[i] == 0);
                                                                                ^
  symbol:   variable int_array
  location: class arraylength1
1 error

class arraylength1 {
  //@ requires size >= 0;
  //@ ensures \result == -1 ==> size < 0;
  //@ ensures \result == 0 ==> size >= 0 && (\exists int[] int_array; int_array.length != size);
  //@ ensures \result == 1 ==> size >= 0 && (\forall int i; 0 <= i && i < size; true);
  public static int func(int size) {
    if (size < 0) return -1;
    int int_array[] = new int[size];

    if(int_array.length != size)
      return 0;
    return 1;
  }
}

